# open-event-intel

./: .gitignore  README.md  manual_database_operations.py  pyproject.toml  requirements.txt  run_preprocess.py  run_scrape.py  run_tkg.py
.github/workflows/: build_deploy.yml  preprocess_posts.yaml  process_posts.yaml  scrape.yml  scrape_posts.yaml  scrape_preprocess.yml
analysis/: visualize_release.py
config/: link_config.sh  possible_corruptions.txt
database/: README.txt  create_test_slice_database.sh  link_database.sh
docs/: app.js  data.js  db.js  heatmap.js  index.html  matrix.js  schema.js  scrape_detail.js  scrape_matrix.js  state.js  style.css  styles.css  tooltip.js  trace.js
docs/public_view/: preprocessed_publications_metadata.json  scraped_publications_metadata.json
docs/scrape_data/: matrix.json  meta.json  overview.json
local_llms/: local_server_setup.sh  metadata.json  start_embedding_server.sh
output/public_view/: preprocessed_publications_metadata.json  scraped_publications_metadata.json
site/: heatmap.js  index.html
src/: data_models.py  publication_preprocessor.py  publications_database.py
src/database/: news_posts_database.py
src/open_event_intel/: data_models.py  publications_database.py
src/preprocessing/: preprocess_raw_posts.py
src/scrapers/: scrape_50hz_posts.py  scrape_acer_posts.py  scrape_agora_posts.py  scrape_amprion_posts.py  scrape_bnetza_posts.py  scrape_ec_posts.py  scrape_eex_posts.py  scrape_energy_wire_posts.py  scrape_entsoe_posts.py  scrape_icis_posts.py  scrape_smard_posts.py  scrape_tennet_posts.py  scrape_transnetbw_posts.py  utils_scrape.py
src/tkg/: config.py  data_models.py  entity_resolution.py  evaluate_extraction.py  run_tkg.py  (+8 more)
(+1439 files in other folders)
